welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	
	while(vacation == false) {
	if(weekday){
			return true ;
	
	}else{
			return false ;
	}
	}
}
